Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32721

Creator Hangs on Debug stop

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 17.0.0
    • Qt Creator 17.0.0
    • Debugger
    • None
    • macOS
    • 36b2d2e24 (master)

      (This worked in Qt Creator 16.0)

      Steps to Reproduce:

      • Create Console Project
      • Set "Run In Terminal = On" (Make sure "Settings => Terminal => Use Internal Terminal" is On)
      • Add breakpoint in main
      • Start debugging
      • Once Breakpoint is hit, press "Stop Debugging" button

      Expected:

      • Debugging stops immediately

      Actual:

      • Creator hangs until timeout for process kill runs out

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes